Completely broken commit because of test branch
- an attempt to implement type inference, won't continue if too demanding, but will allow myself this broken commit just temporarily